--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="row clearfix">
-                <img src="image/logo.jpeg" class="logo">
+                <img src="logo.jpeg" class="logo">
                 <ul class="main-nav animate__slideInDown" id="check">
                     <li><a href="">Home</a></li>
                     <li><a href="">Emergency center</a></li>
